# Digital-items-Marketplace

backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/core/: config.py  constants.py  security.py
backend/app/db/: base.py  session.py
backend/app/dependencies/: auth.py  db.py
backend/app/domains/auth/: repository.py  router.py  schemas.py  service.py
backend/app/models/: auction.py  chat.py  inventory.py  item.py  trade.py  user.py  wallet.py
backend/app/schemas/: response.py
backend/app/workers/: celery_app.py
backend/app/workers/tasks/: auction_tasks.py
